clear: contactless fare, ready net go, why github

--- a/_posts/2018-09-09-ready-...-net-...-go.md
+++ b/_posts/2018-09-09-ready-...-net-...-go.md
@@ -39,6 +39,11 @@ By using smaller and more network towers, coverage can be increased so that data
 
 Finally, by sending signals at directions rather than radially, data transfer takes place more efficiently.
 
-[image-1]: {{ "/assets/img/2018-09-09--1.png" | absolute_url }}
-[image-2]: {{ "/assets/img/2018-09-09--2.png" | absolute_url }}
-[image-3]: {{ "/assets/img/2018-09-09--3.png" | absolute_url }}
+### Quiz Time!
+To test yourself on what you have learnt from the articles in the website and stand a chance to win some prizes and online achievement tokens, you can spend less than five minutes answering some easy questions at the Google Form [here](https://docs.google.com/forms/d/e/1FAIpQLSetnEgQbOyX2vM-QV5sP55QuARuFQorYndlBTVzjttK3ctjSQ/viewform?usp=sf_link).  
+
+
+[image-1]: {{ "/assets/img/2018-09-09-ready-...-net-...-go-1.png" | absolute_url }}
+[image-2]: {{ "/assets/img/2018-09-09-ready-...-net-...-go-2.png" | absolute_url }}
+[image-3]: {{ "/assets/img/2018-09-09-ready-...-net-...-go-3.png" | absolute_url }}
+
