--- a/_posts/2018-11-15-apicta-awards-2018.md
+++ b/_posts/2018-11-15-apicta-awards-2018.md
@@ -1,9 +1,9 @@
 ---
-title: APICTA AWARDS 2018
+title: APICTA AWARDS 2018 - Team VeriNews
 categories: article
-tags: competition recount
-author: Yeoh Yu Yong
-image: "/assets/img/2018-11-15-apicta-awards-2018-preview.jpg"
+tags: recount
+author: Yeoh Yu Yong, Chen Yiyang, Dai Tianle, Lim Yong Jun
+image: "/assets/img/2018-11-15-apicta-awards-2018-verinews-preview.jpg"
 ---
 
 ## Wednesday, 10 Oct 2018 
