--- a/_posts/2019-02-23-adware.md
+++ b/_posts/2019-02-23-adware.md
@@ -32,7 +32,7 @@ questions:
 
 So firstly .... **adware is an unneeded/unwanted software designed to throw advertisments onto your screen(mostly within a web browser)!** _Users usually download it without even knowing it_, and most of the time users would just dimiss these advertisments that pop out of nowhere as part of the website they are going to, but in reality it is the adware at work. Hence, _most people would not even think that their computers have been infected by adware._ 
 
-Adware generates revenue for its developers by displaying advertisments onto your screen (duhhh) although the **advertisments could have nothing to do with the website you are visiting!** And companies actually pay to have their advertisments be displayed onto your computer screen (while u browse through a random website) through a adware that is installed onto your computer without your permission (really evil... :rage:) such that when you unevitably see their advertisment, you may be "motivated" to go and buy it.
+Adware generates revenue for its developers by displaying advertisments onto your screen (duhhh) although the **advertisments could have nothing to do with the website you are visiting!** And companies actually pay to have their advertisments be displayed onto your computer screen (while u browse through a random website) through a adware that is installed onto your computer without your permission (really evil...) such that when you unevitably see their advertisment, you may be "motivated" to go and buy it.
 
 Once adware hijacks your device, it might **carry out all sorts of unwanted tasks.** The software's functions may be designed to **analyze the location and which Internet sites you visit, and then present advertising pertinent to the types of goods or services featured there.** While adware is **more of a pesky nuisance than a harmful malware threat to your cybersecurity**, if the adware authors decide to _sell your browsing behavior and information to third parties_, they can even use it to target you with more advertisements customized to your viewing habits( oh no .. ). And it doesn’t matter whether you are using Chrome, Firefox, or any other search engines: _**IT AFFECTS ALL OF THEM!**_
 
@@ -48,7 +48,7 @@ Once adware hijacks your device, it might **carry out all sorts of unwanted task
 8. Your browser crashes.
 
 
-### **So how are keyloggers spreaded? :worried:**
+### **So how are keyloggers spreaded?**
 
 ![][image-2] 
 
