--- a/_posts/2019-03-21-scratch.md
+++ b/_posts/2019-03-21-scratch.md
@@ -14,9 +14,9 @@ Scratch is an open source system that enables individuals to program interactive
 
 While there may be many different programming languages, they all require typing codes that most people do not understand. However, one particular innovation that will change this is [Scratch](https://scratch.mit.edu/).
 
-The method of using visual blocks to create programs is the future of programming. Here¡¯s why: 
+The method of using visual blocks to create programs is the future of programming. Here is why: 
  
-###1.  **Scratch does NOT require syntax**
+### 1.  **Scratch does NOT require syntax**
 In order to build your own program, all you have to do is move blocks around. It is manipulated through visual means rather than by typing code. Visual blocks are more self-explanatory as they use English. While today¡¯s development tools include features to help reduce typing mistakes, such as autocomplete, sometimes developers still spend hours debugging on a simple typo.
 
 ### 2.  **Scratch can be used to create sophisticated programs**
