--- a/_posts/2019-03-21-scratch.md
+++ b/_posts/2019-03-21-scratch.md
@@ -31,4 +31,4 @@ Explore some of the millions of programs created with **Scratch** at [scratch.mi
 Also check out a game created by our very own students.
 [Click here for fun!](https://scratch.mit.edu/projects/230745819/)
 
-![][image-1]:{{/assets/img/2019-03-21-scratch-1.jpg}}
+[image-1]: {{ "/assets/img/2019-03-21-scratch-1.jpg" | absolute_url}}
