--- a/_posts/2019-03-21-scratch.md
+++ b/_posts/2019-03-21-scratch.md
@@ -1,5 +1,5 @@
 ---
-title: Scratch is future of programming
+title: Scratch is Future of Programming
 categories: article
 tags: programming development
 author: Koon Joon Yang Ethan, Cayden Tan, Matthew Karuna Lim, Chen Xinyin, Xu Xicheng
