Include quizzes for pages with questions
Even some of these are quite old, I've included them for
posterity. Sorry these weren't working before!

--- a/_posts/2019-02-23-adware.md
+++ b/_posts/2019-02-23-adware.md
@@ -94,6 +94,8 @@ On the next episode of "WhatTheHack?", we would be exploring on what the hack is
 2. [Episode 2:Browser Hijacking?](https://dunmanhigh.github.io/smarticc/2018/11/15/browser-hijacking)
 3. [Episode 3:Keylogger?](https://dunmanhigh.github.io/smarticc/2019/01/17/keylogger)
 
+{% include quiz.html questions=page.questions %}
+
 
 [image-1]: {{ "/assets/img/2019-02-23-adware-1.jpeg" | absolute_url }}
 [image-2]: {{ "/assets/img/2019-02-23-adware-2.jpg" | absolute_url }}
