Fix encoding for FFHBTS
This was originally encoded with Windows-style line endings
(i.e. CRLF), instead of Linux-style line endings (LF).

--- a/_posts/2019-8-26-FFHBTS.md
+++ b/_posts/2019-8-26-FFHBTS.md
@@ -1,9 +1,9 @@
-﻿---
+---
 title: Foldable Phones?
 categories: article
 tags: foldable samsung
 author: Lee Yu Bing Darrius, Ng Jin Seang Jordan, Yap Yu Hung Kimi, Damian Lee Chen Yi, Wang Junzhe
-image: "/assets/img/2019-4-20-Foldablephones-1.jpg"
+image: "/assets/img/2019-04-20-Foldablephones-1.jpg"
 questions:
 - question: "Which statement is correct about the Galaxy Fold?"
   answer: 
@@ -67,7 +67,8 @@ This phone has been getting many positive reviews from users. Looks like Samsung
 4. [Overview: FlexPai Foldable Smartphone - Royole Corporation](https://www.royole.com/en/flexpai)
 ***
 
+{% include quiz.html questions=page.questions %}
 
-[image-1]: {{ "/assets/img/2019-4-20-Foldablephones-2.jpg" | absolute_url }}
-[image-2]: {{ "/assets/img/2019-4-20-Foldablephones-3.jpg" | absolute_url }}
-[image-3]: {{ "/assets/img/2019-4-20-Foldablephones-4.jpg" | absolute_url }}
+[image-1]: {{ "/assets/img/2019-04-20-Foldablephones-2.jpg" | absolute_url }}
+[image-2]: {{ "/assets/img/2019-04-20-Foldablephones-3.jpg" | absolute_url }}
+[image-3]: {{ "/assets/img/2019-04-20-Foldablephones-4.jpg" | absolute_url }}
