Renamed more, Add img ref in drone

--- a/_posts/2019-08-26-mirai.md
+++ b/_posts/2019-08-26-mirai.md
@@ -3,6 +3,7 @@ title: Mirai
 categories: article
 tags: technology
 author: Oon Zheng Kang, Shen Hanzhang, Chen Xinyi
+image: "/assets/img/2019-08-26-Mirai-4.PNG"
 ---
 
 ## Origin
@@ -28,6 +29,7 @@ By now, you would probably be thinking: would not there be a chance for me to be
 	Disconnect possible vulnerable devices whose firmware has stopped updating for a significant amount of time and try and look for a newer replacement.
 
 It may be true that Mirai does not pose much of a risk to those affected as compared to the victims of those various incidents, but Mirai is not the only bot out there in the World Wide Web. There is bound to be similar software floating out there with a worse payload, that may pose significant risk to those affected. Thus, it is recommended to check out the current devices that your household use and put in place the necessary precautions in order to decrease possible damages that will occur from contact with such technologies.
+
 ![][image-3]
 ## Resources
 https://www.howtogeek.com/408036/what-is-the-mirai-botnet-and-how-can-i-protect-my-devices/
@@ -40,5 +42,5 @@ https://www.trendmicro.com/vinfo/us/security/news/internet-of-things/securing-ro
 	Petya versus Not-Petya 
 
 [image-1]: {{ "/assets/img/2019-08-26-Mirai-1.jpg" | absolute_url }}
-[image-2]: {{ "/assets/img/2019-08-26-Mirai-2.png" | absolute_url }}
-[image-3]: {{ "/assets/img/2019-08-26-Mirai-3.png" | absolute_url }}
+[image-2]: {{ "/assets/img/2019-08-26-Mirai-2.PNG" | absolute_url }}
+[image-3]: {{ "/assets/img/2019-08-26-Mirai-3.PNG" | absolute_url }}
