fixed drone preview img

--- a/_posts/2019-08-26-drones.md
+++ b/_posts/2019-08-26-drones.md
@@ -3,7 +3,7 @@ title: Drones, the Future
 categories: article
 tags: technology tech robot
 author: Vicky Ang, Kimi Yap, Tse Min Jia
-image: /assets/img/2019-08-26-drone-PRE.png
+image: "/assets/img/2019-08-26-drone-PRE.jpg"
 ---
 
 Drones. Everyone has heard of them before. Some play with them, some use them to take beautiful pictures, some even use them to send packages! In this day and age, what do drones have to offer for us in the future?
